[gd_scene load_steps=7 format=2]

[ext_resource path="res://Platform.gd" type="Script" id=1]
[ext_resource path="res://Sprite.png" type="Texture" id=2]
[ext_resource path="res://assets/Ring.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]

resource_local_to_scene = true
custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=2]

resource_name = "TurnGreen"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Shape/Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.28125, 0, 1 ), Color( 0.0103455, 0.882813, 0.289808, 1 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "TurnRed"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Shape/Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0103455, 0.882813, 0.289808, 1 ), Color( 1, 0.28125, 0, 1 ) ]
}

[node name="Platform" type="StaticBody2D" groups=[
"Platforms",
]]

input_pickable = false
collision_layer = 4
collision_mask = 2
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]

[node name="Shape" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Sprite" type="Sprite" parent="Shape" index="0"]

self_modulate = Color( 0.0103455, 0.882813, 0.289808, 1 )
show_behind_parent = true
scale = Vector2( 0.64, 0.64 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="EnterArea" type="Area2D" parent="Shape" index="1"]

visible = false
scale = Vector2( 1.05, 1.05 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Shape" type="CollisionShape2D" parent="Shape/EnterArea" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="InsideArea" type="Area2D" parent="Shape" index="2"]

visible = false
scale = Vector2( 0.95, 0.95 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Shape" type="CollisionShape2D" parent="Shape/InsideArea" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="AllowSound" type="AudioStreamPlayer2D" parent="." index="1"]

stream = ExtResource( 3 )
volume_db = -10.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="ColorChanger" type="AnimationPlayer" parent="." index="2"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/TurnGreen = SubResource( 2 )
anims/TurnRed = SubResource( 3 )
playback/active = true
playback/speed = 2.0
blend_times = [  ]
autoplay = ""

[connection signal="body_entered" from="Shape/EnterArea" to="." method="_on_player_enter"]

[connection signal="body_exited" from="Shape/EnterArea" to="." method="_on_player_exited"]


